opam-version: "2.0"
name: "more-ocaml"
maintainer: "Mario Nebl <hello@mario-nebl.de>"
authors: "Mario Nebl <hello@mario-nebl.de>"
homepage: "https://github.com/marionebl/more-ocaml"
bug-reports: "https://github.com/marionebl/more-ocaml/issues"
version: "0.1"
synopsis: "Solutions for questions in More OCaml"
depends: [
    "base" {= "v0.12.2"}
    "dune" {with-build & = "1.11.0"}
    "merlin" {dev & = "3.3.2"}
    "ocaml" {>= "4.07.1"}
    "ocp-indent" {dev & = "1.7.0"}
    "ounit" {with-test & = "2.0.8"}
    "ppx_inline_test" {with-test & = "v0.12.0"}
]
